# agent-verification-network

./: .env.bankr-miner  .env.eigencompute-miner  .gitignore  AUDIT-REPORT.md  BUILD.md  CLAUDE.md  Dockerfile  Dockerfile.worker  FINAL-AUDIT-v2.md  FINAL-AUDIT.md  README.md  agent.json  agent_log.json  conversationLog.md  foundry.toml  moltbook_new_post.md  moltbook_update.md  pyproject.toml  submission_description.md
.context/: codex-session-id
.next/: trace
agent_market/: chain.py  commerce.py  erc8004.py  indexer.py  keys.py  logger.py  protocol.py  registry.py  storage.py  supabase_writer.py  token.py  x402.py
agent_market/api/: server.py
agents/: manager_agent.py  miner_agent.py  miner_strategies.py  openserv_agent.py  validator_agent.py  worker_agent.py  worker_strategies.py
cache/: solidity-files-cache.json
contracts/: AgentRegistry.sol  AgentScorer.sol  AgentScorerV2.sol  AgenticCommerce.sol  AgenticCommerceV2.sol  AgenticCommerceV3.sol  MinerRegistry.sol  ProtocolCredits.sol  ProtocolCreditsV2.sol  commerce_deployed.json  commerce_v2_deployed.json  deployed.json  registry_deployed.json  token_deployed.json
docs/: eigencompute-deploy.md
examples/: buggy_auth.py  buggy_code.py  data_processor.py  payment_processor.py  security_vuln.py  unsafe_api.py  wallet_handler.py
migrations/: 001_production_readiness.sql
scripts/: demo.sh  deploy_commerce.py  deploy_commerce_v2.py  deploy_contract.py  deploy_registry.py  deploy_token.py  start.py
tests/: test_image_verification.py  test_verification.py  test_x402.py
web/: package-lock.json  package.json
(+33 files in other folders)
