[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-verification-network"
version = "1.0.0"
description = "Decentralized code verification by competing AI agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
chain = [
    "web3>=7.0",
]
openserv = [
    "openserv-sdk",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]
